--- a/client/index.html
+++ b/client/index.html
@@ -1,72 +1,86 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Negociações</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.css">
+	<head>
+		<meta charset="UTF-8" />
+		<title>Negociações</title>
+		<link rel="stylesheet" href="css/bootstrap.css" />
+		<link rel="stylesheet" href="css/bootstrap-theme.css" />
+	</head>
+	<body class="container">
+		<h1 class="text-center">Negociações</h1>
 
-</head>
-<body class="container">
+		<form class="form">
+			<div class="form-group">
+				<label for="data">Data</label>
+				<input
+					type="date"
+					id="data"
+					class="form-control"
+					required
+					autofocus
+				/>
+			</div>
 
-    <h1 class="text-center">Negociações</h1>
+			<div class="form-group">
+				<label for="quantidade">Quantidade</label>
+				<input
+					type="number"
+					min="1"
+					step="1"
+					id="quantidade"
+					class="form-control"
+					value="1"
+					required
+				/>
+			</div>
 
-    <form class="form">
+			<div class="form-group">
+				<label for="valor">Valor</label>
+				<input
+					id="valor"
+					type="number"
+					class="form-control"
+					min="0.01"
+					step="0.01"
+					value="0.0"
+					required
+				/>
+			</div>
 
-        <div class="form-group">
-            <label for="data">Data</label>
-            <input type="date" id="data" class="form-control" required autofocus/>
-        </div>
+			<button class="btn btn-primary" type="submit">Incluir</button>
+		</form>
 
-        <div class="form-group">
-            <label for="quantidade">Quantidade</label>
-            <input type="number" min="1" step="1" id="quantidade" class="form-control" value="1" required/>
-        </div>
+		<div class="text-center">
+			<button class="btn btn-primary text-center" type="button">
+				Importar Negociações
+			</button>
+			<button class="btn btn-primary text-center" type="button">
+				Apagar
+			</button>
+		</div>
+		<br />
+		<br />
 
-        <div class="form-group">
-            <label for="valor">Valor</label>
-            <input id="valor" type="number" class="form-control"  min="0.01" step="0.01" value="0.0" required />
-        </div>
+		<table class="table table-hover table-bordered">
+			<thead>
+				<tr>
+					<th>DATA</th>
+					<th>QUANTIDADE</th>
+					<th>VALOR</th>
+					<th>VOLUME</th>
+				</tr>
+			</thead>
 
-        <button class="btn btn-primary" type="submit">Incluir</button>
-    </form>
+			<tbody></tbody>
 
-    <div class="text-center">
-        <button class="btn btn-primary text-center" type="button">
-            Importar Negociações
-        </button>
-        <button class="btn btn-primary text-center" type="button">
-            Apagar
-        </button>
-    </div>
-    <br>
-    <br>
-
-    <table class="table table-hover table-bordered">
-        <thead>
-            <tr>
-                <th>DATA</th>
-                <th>QUANTIDADE</th>
-                <th>VALOR</th>
-                <th>VOLUME</th>
-            </tr>
-        </thead>
-
-        <tbody>
-        </tbody>
-
-        <tfoot>
-        </tfoot>
-    </table>
-    <script src="js/app/models/Negociacao.js"></script>
-	<script>
-		var n1  = new Negociacao();
-		n1.quantidade = 10;
-		console.log(n1);
-
-		var n2  = new Negociacao();
-		n2.quantidade = 30;
-		console.log(n2);
-	</script>
-</body>
+			<tfoot></tfoot>
+		</table>
+		<script src="js/app/models/Negociacao.js"></script>
+		<script>
+			var n1 = new Negociacao(new Date(), 5, 700);
+			var volume = n1.quantidade * n1.valor;
+			console.log(n1);
+			console.log(volume);
+		</script>
+	</body>
 </html>
