add obtemVolume() method on Negociacao.js

--- a/client/index.html
+++ b/client/index.html
@@ -78,7 +78,7 @@
 		<script src="js/app/models/Negociacao.js"></script>
 		<script>
 			var n1 = new Negociacao(new Date(), 5, 700);
-			var volume = n1.quantidade * n1.valor;
+			var volume = n1.obtemVolume();
 			console.log(n1);
 			console.log(volume);
 		</script>
