--- a/client/index.html
+++ b/client/index.html
@@ -78,9 +78,13 @@
 		<script src="js/app/models/Negociacao.js"></script>
 		<script>
 			var n1 = new Negociacao(new Date(), 5, 700);
-			var volume = n1.obtemVolume();
-			console.log(n1);
-			console.log(volume);
+			//it is allowed to change the value of n1;
+			n1._quantidade = 10;
+			console.log(n1._quantidade);
+			console.log(n1.getData());
+			console.log(n1.getQuantidade());
+			console.log(n1.getValor());
+			console.log(n1.getVolume());
 		</script>
 	</body>
 </html>
