--- a/client/index.html
+++ b/client/index.html
@@ -80,11 +80,10 @@
 			var n1 = new Negociacao(new Date(), 5, 700);
 			//it is allowed to change the value of n1;
 			n1._quantidade = 10;
-			console.log(n1._quantidade);
-			console.log(n1.getData());
-			console.log(n1.getQuantidade());
-			console.log(n1.getValor());
-			console.log(n1.getVolume());
+			console.log(n1.data);
+			console.log(n1.quantidade);
+			console.log(n1.valor);
+			console.log(n1.volume);
 		</script>
 	</body>
 </html>
