test: change day of instace of negociacao

--- a/client/index.html
+++ b/client/index.html
@@ -79,12 +79,11 @@
 		<script>
 			var n1 = new Negociacao(new Date(), 5, 700);
 
-			n1._quantidade = 100000;
-
 			console.log(n1.data);
-			console.log(n1.quantidade);
-			console.log(n1.valor);
-			console.log(n1.volume);
+			var amanha = new Date();
+			amanha.setDate(6);
+			n1.data = amanha;
+			console.log(n1.data)
 		</script>
 	</body>
 </html>
