test: change day of instace of negociacao(2)

--- a/client/index.html
+++ b/client/index.html
@@ -80,10 +80,10 @@
 			var n1 = new Negociacao(new Date(), 5, 700);
 
 			console.log(n1.data);
-			var amanha = new Date();
-			amanha.setDate(6);
-			n1.data = amanha;
-			console.log(n1.data)
+
+			n1.data.setData(6);
+
+			console.log(teste	)
 		</script>
 	</body>
 </html>
