--- a/client/index.html
+++ b/client/index.html
@@ -77,13 +77,15 @@
 		</table>
 		<script src="js/app/models/Negociacao.js"></script>
 		<script>
-			var n1 = new Negociacao(new Date(), 5, 700);
+
+			var hoje = new Date();
+			var n1 = new Negociacao(hoje, 5, 700);
 
 			console.log(n1.data);
 
-			n1.data.setData(6);
+			hoje.setDate(6);
 
-			console.log(teste	)
+			console.log(n1.data)
 		</script>
 	</body>
 </html>
