--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 	<body class="container">
 		<h1 class="text-center">Negociações</h1>
 
-		<form class="form">
+		<form class="form" onsubmit="negociacaoController.adiciona(event)">
 			<div class="form-group">
 				<label for="data">Data</label>
 				<input
@@ -76,16 +76,9 @@
 			<tfoot></tfoot>
 		</table>
 		<script src="js/app/models/Negociacao.js"></script>
+		<script src="js/app/controllers/NegociacaoController.js"></script>
 		<script>
-
-			let hoje = new Date();
-			let n1 = new Negociacao(hoje, 5, 700);
-
-			console.log(n1.data);
-
-			hoje.setDate(6);
-
-			console.log(n1.data)
+			let negociacaoController = new NegociacaoController();
 		</script>
 	</body>
 </html>
