--- a/client/index.html
+++ b/client/index.html
@@ -81,5 +81,20 @@
 		<script>
 			let negociacaoController = new NegociacaoController();
 		</script>
+		<script>
+			//let negociacao = new Negociacao(new Date(), 1, 100);
+			//let negociacaoProxy = new Proxy(negociacao, {});
+
+			let negociacao = new Proxy(new Negociacao(new Date(), 1, 100), {
+				get: function(target, prop, receiver) {
+					console.log(`a propriedade "${prop}" foi interceptada`);
+					//return "Rafael";
+					return Reflect.get(target, prop, receiver);
+				}
+			});
+
+			console.log(negociacao.quantidade);
+			console.log(negociacao.valor);
+		</script>
 	</body>
 </html>
