--- a/client/index.html
+++ b/client/index.html
@@ -86,15 +86,17 @@
 			//let negociacaoProxy = new Proxy(negociacao, {});
 
 			let negociacao = new Proxy(new Negociacao(new Date(), 1, 100), {
-				get: function(target, prop, receiver) {
-					console.log(`a propriedade "${prop}" foi interceptada`);
+				set: function(target, prop, value, receiver) {
+					console.log(
+						`valor anterior: ${target[prop]}, novo valor: ${value}`
+					);
 					//return "Rafael";
-					return Reflect.get(target, prop, receiver);
+					return Reflect.set(target, prop, value, receiver);
 				}
 			});
 
-			console.log(negociacao.quantidade);
-			console.log(negociacao.valor);
+			negociacao._quantidade = 10;
+			negociacao._valor = 200;
 		</script>
 	</body>
 </html>
