--- a/client/index.html
+++ b/client/index.html
@@ -53,7 +53,11 @@
 		</form>
 
 		<div class="text-center">
-			<button class="btn btn-primary text-center" type="button">
+			<button
+				onclick="negociacaoController.importarNegociacoes()"
+				class="btn btn-primary text-center"
+				type="button"
+			>
 				Importar Negociações
 			</button>
 			<button
