--- a/client/index.html
+++ b/client/index.html
@@ -81,6 +81,7 @@
 		<script src="js/app/views/NegociacoesView.js"></script>
 		<script src="js/app/models/Mensagem.js"></script>
 		<script src="js/app/views/MensagemView.js"></script>
+		<script src="js/app/services/NegociacaoService.js"></script>
 
 		<script>
 			let negociacaoController = new NegociacaoController();
