getting to know the IndexedDB

--- a/client/index.html
+++ b/client/index.html
@@ -89,5 +89,9 @@
 		<script>
 			let negociacaoController = new NegociacaoController();
 		</script>
+		<script>
+			console.log(window.indexedDB);
+			console.log(indexedDB);
+		</script>
 	</body>
 </html>
