--- a/client/learning_indexeddb.html
+++ b/client/learning_indexeddb.html
@@ -7,15 +7,22 @@
 		<title>Aprendendo Indexeddb</title>
 	</head>
 	<body>
+		<script src="js/app/models/Negociacao.js"></script>
 		<script>
 			var connection;
 			console.log(window.indexedDB);
-			var openRequest = window.indexedDB.open("aluraframe", 2);
+			var openRequest = window.indexedDB.open("aluraframe", 5);
 
 			openRequest.onupgradeneeded = e => {
 				console.log("Cria ou altera um banco já existente");
-				var myConnection = e.target.result;
-				myConnection.createObjectStore("negociacoes");
+				let myConnection = e.target.result;
+
+				if (myConnection.objectStoreNames.contains("negociacoes")) {
+					myConnection.deleteObjectStore("negociacoes");
+				}
+				myConnection.createObjectStore("negociacoes", {
+					autoIncrement: true
+				});
 			};
 
 			openRequest.onsuccess = e => {
@@ -27,6 +34,28 @@
 			openRequest.onerror = e => {
 				console.log(e.target.error);
 			};
+
+			function adiciona() {
+				let transaction = connection.transaction(
+					["negociacoes"],
+					"readwrite"
+				);
+				let store = transaction.objectStore("negociacoes");
+
+				let negociacao = new Negociacao(new Date(), 1, 200);
+
+				let request = store.add(negociacao);
+
+				request.onsuccess = e => {
+					console.log("Negociação concluida com sucesso!");
+				};
+
+				request.onerror = e => {
+					console.log("Não foi possível incluir a negociação");
+				};
+			}
+
+			//adiciona();
 		</script>
 	</body>
 </html>
