feat: remove 'Importar Negociacoes' button and add setInterval to import new negociations automatically

--- a/client/index.html
+++ b/client/index.html
@@ -53,13 +53,13 @@
 		</form>
 
 		<div class="text-center">
-			<button
+			<!-- <button
 				onclick="negociacaoController.importarNegociacoes()"
 				class="btn btn-primary text-center"
 				type="button"
 			>
 				Importar Negociações
-			</button>
+			</button> -->
 			<button
 				onclick="negociacaoController.apaga()"
 				class="btn btn-primary text-center"
