refactor(NegociacaoController): change .adiciona(event) for better reading

--- a/client/index.html
+++ b/client/index.html
@@ -91,10 +91,6 @@
 		<script>
 			let negociacaoController = new NegociacaoController();
 		</script>
-		<script>
-			var letras = ["a", "b", "c", "d"];
-			letras.some(letra => console.log(letra));
-			letras.some(letra => letra == "b");
-		</script>
+		<script></script>
 	</body>
 </html>
