--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,9 @@
 		<br />
 
 		<div id="negociacoesView"></div>
-
+		<script>
+			var exports = {};
+		</script>
 		<script src="js/app/polyfill/fetch.js"></script>
 		<script src="js/app/models/Negociacao.js"></script>
 		<script src="js/app/controllers/NegociacaoController.js"></script>
