--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 		<title>Negociações</title>
 		<link rel="stylesheet" href="css/bootstrap.css" />
 		<link rel="stylesheet" href="css/bootstrap-theme.css" />
+		<!-- <script src="js/app-es6/polyfill/es6.js"></script> -->
 	</head>
 	<body class="container">
 		<h1 class="text-center">Negociações</h1>
