configure boot.js

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 
 		<div id="mensagemView"></div>
 
-		<form class="form" onsubmit="negociacaoController.adiciona(event)">
+		<form class="form">
 			<div class="form-group">
 				<label for="data">Data</label>
 				<input
@@ -61,11 +61,7 @@
 			>
 				Importar Negociações
 			</button> -->
-			<button
-				onclick="negociacaoController.apaga()"
-				class="btn btn-primary text-center"
-				type="button"
-			>
+			<button class="btn btn-primary text-center" type="button">
 				Apagar
 			</button>
 		</div>
